<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv1" />
    <EditText
        android:id="@+id/edit_text_tarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et1" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv2" />
    <EditText
        android:id="@+id/edit_text_fecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et2"
        android:focusable="false"
        android:inputType="date" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv3" />
    <EditText
        android:id="@+id/edit_text_hora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et3"
        android:focusable="false"
        android:inputType="time" />
    <Button
        android:id="@+id/btn_confirmar"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:text="@string/btnCon" />
</LinearLayout>
